# Gomoku

./: .gitignore  CMakeLists.txt  README.md
MCTS/: CMakeLists.txt
MCTS/include/: game.h  gomoku.h  mcts.h  model.h  train.h
MCTS/src/: game.cpp  gomoku.cpp  main.cpp  mcts.cpp  model.cpp  train.cpp
